--- a/src/assets/scss/partials/header/_header.scss
+++ b/src/assets/scss/partials/header/_header.scss
@@ -1,6 +1,6 @@
 .headerBg {
   background: var(--theme-governance-headerBg);
-  @media screen and (min-width: 320px) and (max-width: 768px) {
+  @media screen and (min-width: 320px) and (max-width: 992px) {
     background: var(--theme-governance-mobileBg);
   }
 }
